--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "heroku": "^7.42.1",
     "koa": "^2.12.0",
     "koa-logger": "^3.2.1",
-    "koa-router": "^9.0.1"
+    "koa-router": "^9.0.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jest": "^26.0.1",
