--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "heroku": "^7.42.1",
     "koa": "^2.12.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-router": "^9.0.1",
     "request": "^2.88.2"
