--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "heroku": "^7.42.1",
+    "@koa/cors":"^3.1.0",
     "koa": "^2.12.0",
     "koa-body": "^4.1.3",
     "koa-bodyparser": "^4.3.0",
