--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "heroku": "^7.42.1",
-    "@koa/cors":"^3.1.0",
     "koa": "^2.12.0",
     "koa-body": "^4.1.3",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-router": "^9.0.1",
+    "koa-static": "^5.0.0",
     "nodemon": "^2.0.4",
     "request": "^2.88.2"
   },
