--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-body": "^4.1.3",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
+    "koa-request": "^1.0.0",
     "koa-router": "^9.0.1",
     "koa-static": "^5.0.0",
     "nodemon": "^2.0.4",
